# oucc-kizai-bot

./: .env.example  .gitignore  COMPLIANCE.md  Cargo.toml  DEVELOPMENT_PLAN.md  Dockerfile  MIGRATION_NOTES.md  PERFORMANCE.md  README.md  docker-compose.yml  specification.md
.sqlx/: query-05d941befdf3df7e69ed6f3f946cfce2cb7646a677b0a1c84134dbbaed4d7174.json  query-073110b8d8c809500ed5fd5af0b0f4dd47f183a13e4b9db036ba20a742f39a53.json  query-0786ebe82fb5934c7438178e2a927c77ec9c7b6e84a1ec207381a9bcaa611bb4.json  query-0922d58b22d96d2d372faf058586cf2827fe9c5311078abbf3820452d0eb14ef.json  query-0b6e327d209147d1ad844ca08278f494ef640c1fb9e4c5f7b673a9075cdc1fe0.json  query-1a3ae012ccf3411bcfc83268dab365c04013318be1e3fbe0706ada0a470bf10c.json  query-1af6d1d32164dd367a7acba15fa99b91d0442b1ff50175cef9332db5b1810f1c.json  query-1b622a37adc4d72ac53efe38d43290a9c4c737b30e9dcd4603932f37374ffaf0.json  query-1c936373542218c967a753c04660ae14421e8892032cc3fe5ca77bb9e3bd8464.json  query-1c9caf927b0205be7847ac2e9b3ae910f0648c760e63995532702e41427b3bd2.json  query-20a0adb1a814b67f3f902512a33e3be98606d4eae7e556b50ef4f2fdd5cad447.json  query-23e875ded2a977f39d820b94037d7ac805f31193b6dd194d6c4215208bdb467a.json  query-25900017a865bb9db55c597a521532baee1883e80a92299dd786ab084ec40e6b.json  query-2622fa81f023fb46f2e3e63c0a3b3eaca0e6097c20aee8db192708154637fa3a.json  query-265c9330bab17e6f0a2de577b0ba2559d742b9ff3e944a50916d6929ed42e7af.json  query-27069eb22f8bedf14e10e6030472dc9ff69f43cf332da58f4489d8e20716b7f3.json  query-2a382b39af3d0f4e913891c43ace4eef9d6c1b4845a4417c0b97c84652602ca6.json  (+71 more)
(+61 files in other folders)
