[package]
name = "oucc-kizai-bot"
version = "0.1.0"
edition = "2021"

[lib]
name = "oucc_kizai_bot"
path = "src/lib.rs"

[[bin]]
name = "oucc-kizai-bot"
path = "src/main.rs"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
serenity = { version = "0.12", default-features = false, features = [
    "client",
    "gateway",
    "rustls_backend",
    "model",
    "cache",
    "framework",
    "standard_framework",
    "builder"
] }
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "sqlite", "chrono", "migrate"] }
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dotenv = "0.15"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4"] }
anyhow = "1.0"
thiserror = "1.0"
async-trait = "0.1"
futures = "0.3"
lazy_static = "1.4"

[dev-dependencies]
tempfile = "3.0"
tokio-test = "0.4"
futures = "0.3"